--- a/css/style.css
+++ b/css/style.css
@@ -518,9 +518,31 @@ img {vertical-align: middle;}
 /*------------------------------
 	popular Movie
 ------------------------------*/
-.image-resize2{
- 	height: 350px;
+.image-container {
+  display: flex;
+  flex-wrap: nowrap; 
+  overflow-x: auto;
 }
+
+.image-resize2 {
+  width: 280px;
+  height: 280px;
+  object-fit: contain;
+  margin-right: 10px;
+}
+.image-box {
+  overflow-x: auto; /* Enable horizontal scrolling */
+}
+
+.card-container {
+  display: flex; /* Display cards in a row */
+  flex-wrap: nowrap; /* Prevent cards from wrapping to the next line */
+}
+
+.card {
+  margin-right: 10px; /* Add some space between cards */
+}
+
 .running-movie{
 	margin-top: 18px;
 	margin-bottom: 20px;
